# xdg-desktop-portal-xapp

./: .gitignore  README.md  meson.build  meson_options.txt
data/: meson.build  org.Cinnamon.xml  org.cinnamon.PortalHandlers.xml  org.cinnamon.Screenshot.xml  org.freedesktop.impl.portal.desktop.cinnamon.service.in  org.freedesktop.impl.portal.desktop.xapp-cinnamon.service.in  org.freedesktop.impl.portal.desktop.xapp-mate.service.in  org.freedesktop.impl.portal.desktop.xapp.service.in  org.gnome.ScreenSaver.xml  org.gnome.SessionManager.xml  org.gnome.Shell.Screenshot.xml  org.x.apps.portal.gschema.xml  xapp-cinnamon.portal  xapp-gnome-keyring.portal  xapp-mate.portal  xapp.portal  xdg-desktop-portal-cinnamon.desktop.in.in  xdg-desktop-portal-cinnamon.service.in  xdg-desktop-portal-xapp-cinnamon.desktop.in  xdg-desktop-portal-xapp-cinnamon.service.in  xdg-desktop-portal-xapp-mate.desktop.in  xdg-desktop-portal-xapp-mate.service.in  xdg-desktop-portal-xapp.desktop.in  xdg-desktop-portal-xapp.service.in
debian/: changelog  control  copyright  rules  xdg-desktop-portal-cinnamon.install  xdg-desktop-portal-xapp-cinnamon.install  xdg-desktop-portal-xapp-mate.install  xdg-desktop-portal-xapp.install
po/: POTFILES.in  ab.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  nl.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po  (+1 more)
src/: appchooserdialog.c  appchooserdialog.ui  appchooserrow.c  background.c  background.h  inhibit.c  lockdown.c  meson.build  screenshot.c  settings.c  settings.h  utils.c  utils.h  wallpaper.c  xdg-desktop-portal-cinnamon.c  xdg-desktop-portal-cinnamon.gresource.xml  xdg-desktop-portal-xapp-cinnamon.c  xdg-desktop-portal-xapp-mate.c  xdg-desktop-portal-xapp.c  xdg-desktop-portal-xapp.gresource.xml
